# git-describer

./: .gitignore  LICENSE  README.md
git-describer/: git-describer.cabal  stack.yaml
git-describer/app/: Main.hs
git-describer/src/: DB.hs  Messages.hs  Parser.hs  Processing.hs
git-describer/temp/: site.html
git-describer/test/: Spec.hs
