name:                git-describer
version:             0.0.1
synopsis:            Git-describer telegram bot
description:         Please see README.md
homepage:            https://github.com/githubuser/git-describer#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Parser
                     , Messages
                     , Processing
  -- other-modules:
  build-depends:       base >= 4.7 && < 5
                     , text
                     , transformers
                     , http-media
                     , http-types
                     , mime-types
                     , bytestring
                     , string-conversions
                     , html
                     , telegram-api
                     , http-client-tls
                     , HandsomeSoup >= 0.4.2
                     , hxt >= 9.3.1.16
                     , http-conduit >= 2.2.3
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-binds


executable git-describer-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson == 1.0.*
                     , http-api-data
                     , http-client-tls
                     , http-client >= 0.5 && < 0.6
                     , servant >= 0.9 && <0.10
                     , servant-client >= 0.9 && <0.10
                     , mtl >= 2.2 && < 2.3
                     , text
                     , transformers
                     , http-media
                     , http-types
                     , mime-types
                     , bytestring
                     , string-conversions
                     , html
                     , telegram-api
                     , git-describer
  default-language:    Haskell2010

test-suite git-describer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , git-describer
                     , tasty
                     , telegram-api
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ugg0t/git-describer
